[package]
name = "save_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
xdg = "2.4.1"
